Add tests on `PalaemonSessionService`